--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="progress"></div>
                 </div>
             </div>
-            <audio src="music-player_music_ukulele.mp3" id="audio"></audio>
+            <audio src="music/ukulele.mp3" id="audio"></audio>
             <div class="img-container">
                 <img src="/img/ukulele.jpg" alt="music-cover" id="cover">
             </div>
