--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="music-info">
                 <h4 id="title">Ukulele</h4>
                 <div class="progress-container">
-                    <div class="progress"></div>
+                    <div class="progress" id="progress"></div>
                 </div>
             </div>
             <audio src="music/ukulele.mp3" id="audio"></audio>
